# vial.github.io

./: .env.example  .eslintrc.json  .flake8  .git_trainer.py  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.alchemist  Dockerfile.final  Dockerfile.full  Dockerfile.monitor  Dockerfile.prod  Dockerfile.sdk  LICENSE  MCP_Alchemist_Integration_Guide.md  Makefile  README.md  accessibility-check.yml  action-version-check.yml  agirag.html  alembic.ini  api-key-check.yml  api-rate-limit-check.yml  api-timeout-check.yml  auth-check.yml  branch-check.yml  browser-compat-check.yml  bundle-size-check.yml  canvas-overlap-check.yml  canvas-performance-check.yml  canvas-resize-check.yml  cors-check.yml  css-load-check.yml  db-connection-check.yml  dns-check.yml  dns-propagation.yml  docker-build-check.yml  docker-compose.prod.yml  docker-compose.yml  economic-config.json  (+69 more)
clients/: claude.mcp.json  cursor.mcp.json
config/: agent.yaml  nasa_tools.yaml  tasks.yaml
docs/: CONTRIBUTING.md  INDEX.md  alchemist-guide.md  api-reference.md  api.md  architecture.md  contributing.md  deployment-guide.md  dropship-guide.md  gibs-guide.md  mcp-guide.md  nasa-advanced.md  nasa-troubleshooting.md  registry.md  roadmap.md  setup-guide.md  user-guide.md  user_guide.md  video.md
k8s/: helm-chart.yaml
lib/: mongodb.js
mcp/: __init__.py  app.py  requirements.txt
node/: gateway.js
pages/: _apps.js  index.js
prometheus/: mcp-monitoring.yml
public/: Dockerfile  Dockerfile.nextjs  client_index.html  index.html  manifest.json  next.config.js  service-worker.js
scripts/: backup-sdk.sh  deploy-sdk.sh  deploy.sh  deploy_script.py  deployment-script.sh  deployment_validator.py  init.sh  mcp_dev.sh  publish_registry.sh  update_deps.sh
server/: __init__.py  client_manifest_claude.json  config.py  error_handler.py  logging.py  logging_config.py  main.py  mcp_alchemist.py  mcp_server.py  mcp_transport_metrics.py  middleware.py  network_sync.py  privacy_engine.py  quantum_sync.py  security.py  terminal.py  utils.py  websocket.py  webxos_wallet.py
static/: mode_dashboard.js  settings_menu.js  svg_editor.js  ui-controls.js  ui_controls_enhanced.js
(+515 files in other folders)
