[project]
name = "vial-mcp"
version = "1.0.0"
description = "Vial MCP Server for quantum, LLM, and industrial applications"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "sqlalchemy==2.0.35",
  "torch==2.4.1",
  "qiskit==1.2.4",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "pymongo==4.8.0",
  "redis==5.0.8"
]

[project.optional-dependencies]
dev = [
  "flake8==7.1.1",
  "black==24.8.0",
  "bandit==1.7.9",
  "safety==3.2.0",
  "pytest==8.3.2",
  "pytest-cov==5.0.0"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.bandit]
targets = "server/"
