[tool.poetry]
name = "agora-protocol"
version = "0.2.0"
description = "Python library for the Agora Protocol."
authors = ["Samuele Marro <marrosamuele@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "agora" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.12"
langchain-core = "^0.3.20"
langgraph = "^0.2.60"
flask = "^3.1"
requests = "^2.32"
PyYAML = "^6.0"
RestrictedPython = "^7.4"
camel-ai = {version="^0.2.6", optional=true}
agora-protocol = "^0.2.0"  # Added Agora Protocol

[tool.poetry.extras]
camel-ai = ["camel-ai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
